--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,5 +1,6 @@
 const path = require('path');
 
+//config duong dan de tao file
 module.exports = {
     'config': path.resolve('./src/config', 'config.json'),
     'migrations-path': path.resolve('./src/miggrations', 'migrations'),
