--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,7 +3,7 @@ const path = require('path');
 //config duong dan de tao file
 module.exports = {
     'config': path.resolve('./src/config', 'config.json'),
-    'migrations-path': path.resolve('./src/miggrations', 'migrations'),
-    'models-path': path.resolve('./src/models', 'models'),
-    'seeders-path': path.resolve('./src/seeders', 'seeders')
+    'migrations-path': path.resolve('./src/', 'migrations'),
+    'models-path': path.resolve('./src/', 'models'),
+    'seeders-path': path.resolve('./src/', 'seeders')
 }
