--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "4.17.2",
     "mysql2": "2.3.3",
     "nodemon": "2.0.15",
+    "react-toastify": "8.1.0",
     "sequelize": "6.13.0",
     "sequelize-cli": "6.3.0"
   }
